--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: Percio Andrade
 
 # Name of the author
-author: Amit Merchant
+author: Percio Andrade
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: personal
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
@@ -21,15 +21,15 @@ avatar: /images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
+  email: perciocastelo@gmail.com
   facebook:
   flickr:
-  github: amitmerchant1990/reverie
+  github: percioandrade
   instagram:
   linkedin: 
   pinterest:
   rss: rss
-  twitter: amit_merchant
+  twitter: percioandrade
   stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
