--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ avatar: /images/reverie.png
 footer-links:
   dribbble:
   email: perciocastelo@gmail.com
-  facebook:
+  facebook: percioandrade
   flickr:
   github: percioandrade
   instagram:
