--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ footer-links:
   facebook: percioandrade
   flickr:
   github: percioandrade
-  instagram:
-  linkedin: 
+  instagram: thepercio_
+  linkedin: percioandrade
   pinterest:
   rss: rss
   twitter: percioandrade
