--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
-github: amitmerchant1990
-custom: paypal.me/AmitMerchant
-patreon: amitmerchant
+github: percioandrade
+custom: https://www.paypal.com/donate/?hosted_button_id=MXPTR8A4YVYPC
+patreon: 
