--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Percio Andrade
 description: personal
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/percio.png
 
 #
 # Flags below are optional
